[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,24 @@
 <html>
+    <head>
+      <title>Tuhin's Fav Films</title>  
+    </head>
+    <body>
+        <div>
+            <a href="/"> Home</a>
+        </div>
+        <h1> MY FAVOURITE FILMS </h1>
+        <p> 
+        <ul>
+            <li> The Shawshank Redemption</li>
+            <li> Forrest Gump</li>
+            <li> The Godfather trilogy</li>
+            <li> The Batman trilogy</li>
+            <li> Memento</li>
+            <li> The Prestige</li>
+            <li> Fight Club</li>
+            <li> Se7en</li>
+            
+        </ul>
+        </p>
+    </body>
 </html>
