[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! This is Batman.
         </div>
+        <div class = "center">
+            <img src =https://giphy.com/gifs/vintage-batman-retro-bcyEgS6C7Lqg">
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
