--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! This is Batman.
         </div>
         <div class = "center">
-            <img src =https://giphy.com/gifs/vintage-batman-retro-bcyEgS6C7Lqg">
+            <img src ="/ui/Batman.gif">
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
