[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! This is Batman.
         </div>
         <div class = "center">
-            <img src ="/ui/Batman.gif">
+            <img src ="http://gph.is/1kBfW6a">
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
