--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
-    <body background = "white">
+    <body bgcolor = "white">
         <div class="center">
             <img src="http://www.vectortemplates.com/raster/old-batman-logo.gif" class="img-medium"/>
         </div>
