[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
-    <body bgcolor = "#FFFFFF">
+    <body style="background-color:#FFFFFF">
         <div class="center">
             <img src="http://www.vectortemplates.com/raster/old-batman-logo.gif" class="img-medium"/>
         </div>
