[imad-console] Updates ui/serials.html

--- a/ui/serials.html
+++ b/ui/serials.html
@@ -1,1 +1,24 @@
-
+<html>
+    <head>
+      <title>Tuhin's Fav Films</title>  
+    </head>
+    <body>
+        <div>
+            <a href="/"> Home</a>
+        </div>
+        <h1> MY FAVOURITE SERIALS </h1>
+        <p> 
+        <ul>
+            <li> Mr. Robot</li>
+            <li> Game of Thrones</li>
+            <li> Friends</li>
+            <li> Seinfeld</li>
+            <li> House of Cards</li>
+            <li> Narcos</li>
+            <li> Sherlock</li>
+            <li> Stranger Things</li>
+            
+        </ul>
+        </p>
+    </body>
+</html>
