[imad-console] Updates ui/serials.html

--- a/ui/serials.html
+++ b/ui/serials.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title>Tuhin's Fav Films</title>  
+      <title>Tuhin's Fav Serials</title>  
     </head>
     <body>
         <div>
