[imad-console] Updates ui/films.html

--- a/ui/films.html
+++ b/ui/films.html
@@ -2,23 +2,35 @@
     <head>
       <title>Tuhin's Fav Films</title>  
     </head>
+    <style>
+        .container{
+            font-family: sans-serif;
+            margin: 0 auto;
+            max-width: 800px;
+            color: blue;
+        }
+    </style>
     <body>
-        <div>
-            <a href="/"> Home</a>
-        </div>
-        <h1> MY FAVOURITE FILMS </h1>
-        <p> 
-        <ul>
-            <li> The Shawshank Redemption</li>
-            <li> Forrest Gump</li>
-            <li> The Godfather trilogy</li>
-            <li> The Batman trilogy</li>
-            <li> Memento</li>
-            <li> The Prestige</li>
-            <li> Fight Club</li>
-            <li> Se7en</li>
+        <div class = "container">
+            <div>
+                <a href="/"> Home</a>
+            </div>
+            <h1> MY FAVOURITE FILMS </h1>
+            <div class = "list">
+            <p> 
+            <ul>
+                <li> The Shawshank Redemption</li>
+                <li> Forrest Gump</li>
+                <li> The Godfather trilogy</li>
+                <li> The Batman trilogy</li>
+                <li> Memento</li>
+                <li> The Prestige</li>
+                <li> Fight Club</li>
+                <li> Se7en</li>
             
-        </ul>
-        </p>
+            </ul>
+            </p>
+            </div> 
+        </div>
     </body>
 </html>
