--- a/ui/films.html
+++ b/ui/films.html
@@ -9,6 +9,10 @@
             max-width: 800px;
             color: blue;
         }
+        .h1{
+        font-weight: bold;
+        color: green;
+        }
     </style>
     <body>
         <div class = "container">
