[imad-console] Updates ui/films.html

--- a/ui/films.html
+++ b/ui/films.html
@@ -9,7 +9,7 @@
             max-width: 800px;
             color: blue;
         }
-        .h1{
+        .header{
         font-weight: bold;
         color: green;
         }
@@ -19,7 +19,9 @@
             <div>
                 <a href="/"> Home</a>
             </div>
+            <div class = "header">
             <h1> MY FAVOURITE FILMS </h1>
+            </div>
             <div class = "list">
             <p> 
             <ul>
