[imad-console] Updates ui/films.html

--- a/ui/films.html
+++ b/ui/films.html
@@ -4,10 +4,11 @@
     </head>
     <style>
         .container{
-            font-family: sans-serif;
-            margin: 0 auto;
-            max-width: 800px;
-            color: blue;
+        font-family: sans-serif;
+        margin: 0 auto;
+        max-width: 800px;
+        color: #062e8c;
+        padding-top: 80px;
         }
         .header{
         font-weight: bold;
