[imad-console] Updates ui/films.html

--- a/ui/films.html
+++ b/ui/films.html
@@ -9,6 +9,8 @@
         max-width: 800px;
         color: #062e8c;
         padding-top: 80px;
+        padding-left: 20px;
+        padding-right: 20px;
         }
         .header{
         font-weight: bold;
