[imad-console] Updates ui/films.html

--- a/ui/films.html
+++ b/ui/films.html
@@ -1,22 +1,8 @@
 <html>
     <head>
-      <title>Tuhin's Fav Films</title>  
+      <title>Tuhin's Fav Films</title>
+      <link href="/ui/style.css" rel="stylesheet" />
     </head>
-    <style>
-        .container{
-        font-family: sans-serif;
-        margin: 0 auto;
-        max-width: 800px;
-        color: #062e8c;
-        padding-top: 80px;
-        padding-left: 20px;
-        padding-right: 20px;
-        }
-        .header{
-        font-weight: bold;
-        color: green;
-        }
-    </style>
     <body>
         <div class = "container">
             <div>
