[imad-console] Updates ui/films.html

--- a/ui/films.html
+++ b/ui/films.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title>Tuhin's Fav Films</title>
+      <title>Batmans Fav Films</title>
       <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
@@ -8,8 +8,11 @@
             <div>
                 <a href="/"> Home</a>
             </div>
+            <div>
+                Wayne Mansion, Gotham City
+            </div>
             <div class = "header">
-            <h1> MY FAVOURITE FILMS </h1>
+            <h1> BATMANS FAVOURITE FILMS </h1>
             </div>
             <div class = "list">
             <p> 
