--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <title>Batman Begins</title>
     </head>
     <body style="background-color:#FFFFFF">
         <div class="center">
@@ -10,6 +11,7 @@
         <br>
         <div class="center text-big bold">
             Hi! This is Batman.
+            Na na na na na na na na Batman!!!
         </div>
         <div class = "center">
             <img src ="/ui/Batman.gif">
