[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,11 +11,14 @@
         <br>
         <div class="center text-big bold">
             Hi! This is Batman.
-            Na na na na na na na na Batman!!!
         </div>
         <div class = "center">
             <img src ="/ui/Batman.gif">
         </div>
+         <div class="center text-big bold">
+            Na na na na na na na na Batman!!!
+        </div>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
