[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,6 +18,9 @@
          <div class="center text-big bold">
             Na na na na na na na na Batman!!!
         </div>
+        <script>
+            alert("You're not prepared to see this!!");
+        </script>
         
         <script type="text/javascript" src="/ui/main.js">
         </script>
