--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
         <title>Batman Begins</title>
     </head>
     <body style="background-color:#FFFFFF">
-        <div class="center">
+        <div id='img' class="center">
             <img src="http://www.vectortemplates.com/raster/old-batman-logo.gif" class="img-medium"/>
         </div>
         <br>
