[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,8 @@
         <title>Batman Begins</title>
     </head>
     <body style="background-color:#FFFFFF">
-        <div id='img' class="center">
-            <img src="http://www.vectortemplates.com/raster/old-batman-logo.gif" class="img-medium"/>
+        <div class="center">
+            <img id = 'img' src="http://www.vectortemplates.com/raster/old-batman-logo.gif" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
