[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     </head>
     <body style="background-color:#FFFFFF">
         <div class="center">
-            <img id = 'img' src="http://www.vectortemplates.com/raster/old-batman-logo.gif" class="img-medium"/>
+            <img id = 'hell' src="http://www.vectortemplates.com/raster/old-batman-logo.gif" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
