--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     </head>
     <body style="background-color:#FFFFFF">
         <div class="center">
-         <img id = 'hell' src = 'madi.png', class = 'img-medium'/>
+         <img id = 'hell' src = '/ui/madi.png', class = 'img-medium'/>
         </div>
         <br>
         <div class="center text-big bold">
