--- a/ui/index.html
+++ b/ui/index.html
@@ -5,14 +5,16 @@
         <title>Batman Begins</title>
     </head>
     <body style="background-color:#FFFFFF">
-        <div class="center">
-         <img id = 'hell' src = "/ui/shawshank.jpg" class = "img-medium" />
+        
+        <div class = "container">
+            <div class="center">
+             <img id = 'hell' src = "/ui/batlogo.gif" class = "img-medium" />
+            </div>
+            <br>
+            <div class="center text-big bold">
+                Hi! This is Batman.
+            </div>
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! This is Batman.
-        </div>
-      
          <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
