--- a/ui/index.html
+++ b/ui/index.html
@@ -10,9 +10,17 @@
             <div class="center">
              <img id = 'hell' src = "/ui/batlogo.gif" class = "img-medium" />
             </div>
+            <hr/>
             <br>
+            <h3> Personal </h3>
             <div class="center text-big bold">
-                Hi! This is Batman.
+                Hi! This is Bruce Wayne.
+            </div>
+            <hr/>
+            <br>
+            <h3> Professional </h3>
+            <div>
+            Hi! This is Batman!
             </div>
         </div>
          <script type="text/javascript" src="/ui/main.js">
