[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,6 +23,9 @@
             Hi! This is Batman!
             </div>
         </div>
+        <div class="footer">
+            This button <Button id = 'counter'> CLICK ME </Button> has been clicked <span id = 'count'>0</span> times.
+        </div>
          <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
