--- a/ui/index.html
+++ b/ui/index.html
@@ -25,6 +25,15 @@
         </div>
         <div class="footer">
             This button <Button id = 'counter'> CLICK ME </Button> has been clicked <span id = 'count'>0</span> times.
+            <br/>
+            <input type = "text" id = 'name' placeholder="text"></input>
+            <input type ="submit" value="Submit"></input>
+            <ul>
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+            </ul>
+            
         </div>
          <script type="text/javascript" src="/ui/main.js">
         </script>
