[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -28,10 +28,8 @@
             <br/>
             <input type = "text" id = 'name' placeholder="text"></input>
             <input type ="submit" value="Submit"> </input>
-            <ul>
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+            <ul id='namelist'>
+                
             </ul>
             
         </div>
