--- a/ui/index.html
+++ b/ui/index.html
@@ -27,7 +27,7 @@
             This button <Button id = 'counter'> CLICK ME </Button> has been clicked <span id = 'count'>0</span> times.
             <br/>
             <input type = "text" id = 'name' placeholder="text"></input>
-            <input type ="submit" value="Submit"> </input>
+            <input type ="submit" value="Submit" id='submit_btn'> </input>
             <ul id='namelist'>
                 
             </ul>
