--- a/ui/index.html
+++ b/ui/index.html
@@ -2,9 +2,25 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <link href = "/ui/bootstrap.css" rel="stylesheet"/>
         <title>Batman Begins</title>
     </head>
     <body style="background-color:#FFFFFF">
+        
+          <div class="nav">
+    <div class="container">
+      <ul class="pull-left">
+        <li><a href="#">Name</a></li>
+        <li><a href="#">Browse</a></li>
+      </ul>
+      <ul class="pull-right">
+        <li><a href="#">Sign Up</a></li>
+        <li><a href="#">Log In</a></li>
+        <li><a href="#">Help</a></li>
+      </ul>
+    </div>
+  </div>
+
         
         <div class = "container">
             <div class="center">
