--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,26 @@
     </div>
   </div>
 
-        
+        <div class="row">
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <img src="/ui/FightClub.jpg">
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <img src="/ui/FightClub.jpg">
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <img src="/ui/FightClub.jpg">
+          </div>
+        </div>
+      </div>
+  
         <div class = "container">
             <div class="center">
              <img id = 'hell' src = "/ui/batlogo.gif" class = "img-medium" />
