--- a/ui/index.html
+++ b/ui/index.html
@@ -23,19 +23,19 @@
 
         <div class="row">
         <div class="col-md-4">
-          <div class="thumbnail">
+          <div class="img-rounded" width = "400" height = "200">
             <img src="/ui/FightClub.jpg">
           </div>
         </div>
 
         <div class="col-md-4">
-          <div class="thumbnail">
+          <div class="img-rounded" width = "400" height = "200">
             <img src="/ui/FightClub.jpg">
           </div>
         </div>
 
         <div class="col-md-4">
-          <div class="thumbnail">
+          <div class="img-rounded" width = "400" height = "200">
             <img src="/ui/FightClub.jpg">
           </div>
         </div>
