--- a/ui/index.html
+++ b/ui/index.html
@@ -23,20 +23,20 @@
 
         <div class="row">
         <div class="col-md-4">
-          <div class="img-rounded" width = "400" height = "200">
-            <img src="/ui/FightClub.jpg">
+          <div class="img-rounded" >
+            <img src="/ui/FightClub.jpg" width = "400" height = "200">
           </div>
         </div>
 
         <div class="col-md-4">
-          <div class="img-rounded" width = "400" height = "200">
-            <img src="/ui/FightClub.jpg">
+          <div class="img-rounded" >
+            <img src="/ui/FightClub.jpg" width = "400" height = "200">
           </div>
         </div>
 
         <div class="col-md-4">
-          <div class="img-rounded" width = "400" height = "200">
-            <img src="/ui/FightClub.jpg">
+          <div class="img-rounded" >
+            <img src="/ui/FightClub.jpg" width = "400" height = "200">
           </div>
         </div>
       </div>
