[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,7 @@
         <li><a href="#">Name</a></li>
         <li><a href="#">Browse</a></li>
       </ul>
+      My Blog
       <ul class="pull-right">
         <li><a href="#">Sign Up</a></li>
         <li><a href="#">Log In</a></li>
