[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,12 +14,19 @@
         <li><a href="#">Name</a></li>
         <li><a href="#">Browse</a></li>
       </ul>
-      My Blog
       <ul class="pull-right">
         <li><a href="#">Sign Up</a></li>
         <li><a href="#">Log In</a></li>
         <li><a href="#">Help</a></li>
       </ul>
+    </div>
+  </div>
+  
+  <div class="jumbotron">
+    <div class="container">
+      <h1> Life of a Cinephile </h1>
+      <p>This personal blog represents me and my various nerdy interests</p>
+      <a href="#">Learn More</a>
     </div>
   </div>
 
