[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,6 +3,7 @@
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
         <link href = "/ui/bootstrap.css" rel="stylesheet"/>
+        <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
         <title>Batman Begins</title>
     </head>
     
