--- a/ui/index.html
+++ b/ui/index.html
@@ -40,42 +40,17 @@
 
         <div class="col-md-4">
           <div class="img-rounded" >
-            <img src="/ui/FightClub.jpg" width = "300" height = "300">
+            <img src="/ui/Sherlock.jpg" width = "300" height = "300">
           </div>
         </div>
 
         <div class="col-md-4">
           <div class="img-rounded" >
-            <img src="/ui/FightClub.jpg" width = "300" height = "300">
+            <img src="/ui/Harry.jpg" width = "300" height = "300">
           </div>
         </div>
       </div>
   
-        <div class = "container">
-            <div class="center">
-             <img id = 'hell' src = "/ui/batlogo.gif" class = "img-medium" />
-            </div>
-            <hr/>
-            <br>
-            <h3> Personal </h3>
-            <div class="center text-big bold">
-                Hi! This is Bruce Wayne.
-            </div>
-            <hr/>
-            <br>
-            <h3> Professional </h3>
-            <div>
-            Hi! This is Batman!
-            </div>
-        </div>
-        <div class="footer">
-            This button <Button id = 'counter'> CLICK ME </Button> has been clicked <span id = 'count'>0</span> times.
-            <br/>
-            <input type = "text" id = 'name' placeholder="text"></input>
-            <input type ="submit" value="Submit" id='submit_btn'> </input>
-            <ul id='namelist'>
-                
-            </ul>
             
         </div>
          <script type="text/javascript" src="/ui/main.js">
