[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -27,7 +27,9 @@
     <div class="container">
       <h1> Life of a Cinephile </h1>
       <p>This personal blog represents me and my various nerdy interests</p>
+      <div class= 'learn-more'>
       <a href="#">Learn More</a>
+      </div>
     </div>
   </div>
 
@@ -51,8 +53,28 @@
         </div>
       </div>
   
-            
+  <div class="learn-mor">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h3>Movies</h3>
+          <p>Click on Tyler Durden to know more about the movies I love</p>
+          <p><a href="#">See how to travel on Airbnb</a></p>
         </div>
+        <div class="col-md-4">
+          <h3>Host</h3>
+          <p>Click on Sherlock to see which TV Serials keep me busy</p>
+          <p><a href="#">Learn more about hosting</a></p>
+        </div>
+        <div class="col-md-4">
+          <h3>Books</h3>
+          <p>Click on Potter to know about the books I read</p>
+          <p><a href="#">Learn about trust at Airbnb</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+            
          <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
