[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -35,20 +35,17 @@
 
         <div class="row">
         <div class="col-md-4">
-          <div class="img-rounded" >
-            <img src="/ui/FightClub.jpg" width = "300" height = "300">
+            <img src="/ui/FightClub.jpg" class="img-rounded" width = "300" height = "300">
           </div>
         </div>
 
         <div class="col-md-4">
-          <div class="img-rounded" >
-            <img src="/ui/Sherlock.jpg" width = "300" height = "300">
+            <img src="/ui/Sherlock.jpg" class="img-rounded" width = "300" height = "300">
           </div>
         </div>
 
         <div class="col-md-4">
-          <div class="img-rounded" >
-            <img src="/ui/Harry.jpg" width = "300" height = "300">
+            <img src="/ui/Harry.jpg" class="img-rounded" width = "300" height = "300">
           </div>
         </div>
       </div>
