[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
   </div>
   
   <div class="jumbotron">
-    <div class="contain">
+    <div class="container">
       <h1> Life of a Cinephile </h1>
       <p>This personal blog represents me and my various nerdy interests</p>
       <div class= 'learn-more'>
