[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -48,22 +48,19 @@
       </div>
   
   <div class="learn-mor">
-    <div class="container">
+    <div class="contain">
       <div class="row">
         <div class="col-md-4">
           <h3>Movies</h3>
           <p>Click on Tyler Durden to know more about the movies I love</p>
-          <p><a href="#">See how to travel on Airbnb</a></p>
         </div>
         <div class="col-md-4">
           <h3>Host</h3>
           <p>Click on Sherlock to see which TV Serials keep me busy</p>
-          <p><a href="#">Learn more about hosting</a></p>
         </div>
         <div class="col-md-4">
           <h3>Books</h3>
           <p>Click on Potter to know about the books I read</p>
-          <p><a href="#">Learn about trust at Airbnb</a></p>
         </div>
       </div>
     </div>
