[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
 <h1>Enter movie name </h1>
 <form action="http://tuhinsherlock.imad.hasura-app.io/search-movie">
 Enter Movie name<br>
-<input type="text" name="moviename" value="Enter Movie Name">
+<input type="text" name="movie_name" value="Enter Movie Name">
 <br>
 <input type="submit" value="Search">
 </form>
