Changes made locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,13 +1,12 @@
-<html>
-<head>
-</head>
-<body>
-<h1>Enter movie name </h1>
-<form action="http://tuhinsherlock.imad.hasura-app.io/search-movie">
-Enter Movie name<br>
-<input type="text" name="movie_name" placeholder="Enter Movie Name">
-<br>
-<input type="submit" value="Search">
-</form>
-</body>
-</html>
+		<html>
+		<head> 
+		</head>
+		</body>
+		<h3>Login/Register to unlock awesome features</h3>
+        <input type="text" id="username" placeholder="username" />
+        <input type="password" id="password" />
+        <br/><br/>
+        <input type="submit" id="login_btn" value="Login" />
+        <input type="submit" id="register_btn" value="Register" />
+        </body>
+        </html>
