--- a/ui/index.html
+++ b/ui/index.html
@@ -1,7 +1,7 @@
 		<html>
 		<head> 
 		</head>
-		</body>
+		<body>
 		<h3>Login/Register to unlock awesome features</h3>
         <input type="text" id="username" placeholder="username" />
         <input type="password" id="password" />
