--- a/ui/index.html
+++ b/ui/index.html
@@ -8,5 +8,7 @@
         <br/><br/>
         <input type="submit" id="login_btn" value="Login" />
         <input type="submit" id="register_btn" value="Register" />
+        <script type = "text/javascript" src ="ui/main.js">
+        </script>
         </body>
         </html>
