[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,5 +1,6 @@
 		<html>
 		<head> 
+		<link href="/ui/style.css" rel="stylesheet" />
 		</head>
 		<body>
 		<h3>Login/Register to unlock awesome features</h3>
