[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,6 +23,9 @@
  
   
 </div>
+	<div id="bg">
+		<img src='/ui/Sherlock.jpg' alt="">
+	</div>
 
 <script type = "text/javascript" src = "ui/main.js" >
 </script>
