[imad-console] Updates ui/register.html

--- a/ui/register.html
+++ b/ui/register.html
@@ -1,1 +1,38 @@
 
+	<html>
+	<head>
+	<link href = "/ui/style.css" rel ="stylesheet" />
+	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
+	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
+	<title> Welcome </title>
+	</head>
+	<body>
+	<div class="container">  
+    <div id="contact">
+    <h3>Register</h3>
+    <h4>Register Yourself</h4>
+    <fieldset>
+      <input placeholder="Username" id="username" type="text" tabindex="1" required autofocus>
+    </fieldset>
+    <fieldset>
+      <input placeholder="Password" id="password" type="password" tabindex="2" required>
+    </fieldset>
+    <fieldset>
+      <input placeholder="Name" id ="name" type="text" tabindex="3" required>
+    </fieldset>
+    <fieldset>
+      <input placeholder="Email" id="email" type="email" tabindex="4" required>
+    </fieldset>
+    <fieldset>
+      <input type="submit" id = "register_btn" value="Register">
+    </fieldset>
+  </div>
+ 
+  
+</div>
+
+<script type = "text/javascript" src = "ui/main.js" >
+</script>
+
+</body>
+</html>
