[imad-console] Updates ui/register.html

--- a/ui/register.html
+++ b/ui/register.html
@@ -1,10 +1,10 @@
 
 	<html>
 	<head>
-	<link href = "/ui/style.css" rel ="stylesheet" />
+	<link href = "/ui/registerstyle.css" rel ="stylesheet" />
 	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
 	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
-	<title> Welcome </title>
+	<title> Register </title>
 	</head>
 	<body>
 	<div class="container">  
