--- a/ui/register.html
+++ b/ui/register.html
@@ -31,7 +31,7 @@
   
 </div>
 
-<script type = "text/javascript" src = "ui/main.js" >
+<script type = "text/javascript" src = "ui/register.js" >
 </script>
 
 </body>
