--- a/ui/register.html
+++ b/ui/register.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 	<div class="container">  
-    <div id="contact">
+    <div id="register">
     <h3>Register</h3>
     <h4>Register Yourself</h4>
     <fieldset>
