[imad-console] Updates ui/register.html

--- a/ui/register.html
+++ b/ui/register.html
@@ -9,8 +9,8 @@
 	<body>
 	<div class="container">  
     <div id="register">
-    <h3>Register</h3>
-    <h4>Register Yourself</h4>
+    <h3>Sign Up</h3>
+    <h4>Sign Up for loads of awesome stuff</h4>
     <fieldset>
       <input placeholder="Username" id="username" type="text" tabindex="1" required autofocus>
     </fieldset>
