[imad-console] Updates ui/write-review.html

--- a/ui/write-review.html
+++ b/ui/write-review.html
@@ -18,7 +18,7 @@ Review for
 	<input type = "text" id = "review" placeholder = "Write your review here"/>
 <input type="submit" value="Submit" id = "submit_btn">
 </div>
-<script type = "text/javascript" src = "/write-review.js">
+<script type = "text/javascript" src = "/ui/write-review.js">
 </script>
 </body>
 </html>
