[imad-console] Updates ui/register.html

--- a/ui/register.html
+++ b/ui/register.html
@@ -44,7 +44,7 @@
 
  $('#background')
      .css({
-     'background-image': 'url(http://asia.olympus-imaging.com/products/dslr/e520/sample/images/' + images[Math.floor(Math.random() * images.length)] + ')'
+     'background-image': 'url(images[Math.floor(Math.random() * images.length)] + ')'
  });
 </script>
 </body>
