--- a/ui/register.html
+++ b/ui/register.html
@@ -1,7 +1,7 @@
-
+<!--
 	<html>
 	<head>
-	<!--
+
 	<link href = "/ui/registerstyle.css" rel ="stylesheet" />
 	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
 	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
@@ -35,13 +35,25 @@
 
 <script type = "text/javascript" src = "ui/register.js" >
 </script>
+
+
+</body> 
+</html>
 -->
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-Search Wikipedia!
-<input id="searchterm" type="text" /> <button id="search">search</button>
 
-<script type="text/javascript">// <![CDATA[
+<html>
+  <head>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <title>Comperio Super Simple Instant Search</title>
+  </head>
+  <body>
+	<h1>Search Wikipedia!</h1>
+	<br />
+    <input id="searchterm" />
+    <button id="search">search</button>
+    <div id="results"></div>
+    <script>
       $("#searchterm").keyup(function(e){
         var q = $("#searchterm").val();
         $.getJSON("http://en.wikipedia.org/w/api.php?callback=?",
@@ -53,21 +65,16 @@ Search Wikipedia!
         },
         function(data) {
           $("#results").empty();
-          $("#results").append("
- 
-Results for <b>" + q + "</b>
-
-");
+          $("#results").append("<p>Results for <b>" + q + "</b></p>");
           $.each(data.query.search, function(i,item){
-            $("#results").append("
-<div><a href='http://en.wikipedia.org/wiki/" + encodeURIComponent(item.title) + "'>" + item.title + "</a>" + item.snippet + "</div>
-");
+            $("#results").append("<div><a href='http://en.wikipedia.org/wiki/" + encodeURIComponent(item.title) + "'>" + item.title + "</a><br>" + item.snippet + "<br><br></div>");
           });
         });
       });
- 
-// ]]></script>
-
-
-</body> 
+    </script>
+    <div style="position:absolute;bottom:0;right:0;text-align:right">
+      <a href="http://blog.comperiosearch.com/author/fmcdowall/">Fergus McDowall</a> 2012<br>
+      <br>
+    </div>
+  </body>
 </html>
