[imad-console] Updates ui/register.html

--- a/ui/register.html
+++ b/ui/register.html
@@ -56,18 +56,16 @@
     <script>
       $("#searchterm").keyup(function(e){
         var q = $("#searchterm").val();
-        $.getJSON("http://en.wikipedia.org/w/api.php?callback=?",
+        $.getJSON("https://api.themoviedb.org/3/search/movie?",
         {
-          srsearch: q,
-          action: "query",
-          list: "search",
-          format: "json"
+          api_key: '9c6f4edf8b2c52678bf8e0885ff611d9',
+          query:q
         },
         function(data) {
           $("#results").empty();
           $("#results").append("<p>Results for <b>" + q + "</b></p>");
           $.each(data.query.search, function(i,item){
-            $("#results").append("<div><a href='http://en.wikipedia.org/wiki/" + encodeURIComponent(item.title) + "'>" + item.title + "</a><br>" + item.snippet + "<br><br></div>");
+            $("#results").append("<div><a href='http://en.wikipedia.org/wiki/" + encodeURIComponent(item.title) + "'>" + item.title);
           });
         });
       });
