--- a/ui/register.html
+++ b/ui/register.html
@@ -65,7 +65,7 @@
           $("#results").empty();
           $("#results").append("<p>Results for <b>" + q + "</b></p>");
           $.each(data.query.search, function(i,item){
-            $("#results").append("<div><a href='http://en.wikipedia.org/wiki/" + encodeURIComponent(item.title) + "'>" + item.title);
+            $("#results").append("<div><a href='http://en.wikipedia.org/wiki/" + encodeURIComponent(item.title) + "'>" + item.title+ "</a><br>");
           });
         });
       });
