[imad-console] Updates ui/register.html

--- a/ui/register.html
+++ b/ui/register.html
@@ -42,6 +42,7 @@
 -->
 
 
+<!--
 <html>
   <head>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
@@ -76,4 +77,41 @@
       <br>
     </div>
   </body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>jQuery Test</title>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+</head>
+<body>
+
+  <script type="text/javascript" charset="utf-8">
+    var api_key = '9c6f4edf8b2c52678bf8e0885ff611d9';
+
+    $(document).ready(function(){
+      $.ajax({
+        url: 'http://api.themoviedb.org/3/search/movie?api_key=' + api_key + '&query=fight+club',
+        dataType: 'jsonp',
+        jsonpCallback: 'testing'
+      }).error(function() {
+        console.log('error')
+      }).done(function(response) {
+        for (var i = 0; i < response.results.length; i++) {
+          $('#search_results').append('<li>' + response.results[i].title + '</li>');
+        }
+      });
+    });
+  </script>
+
+  <h2>jQuery Test</h2>
+  <h3>Results</h3>
+
+  <p id="error"></p>
+  <ul id="search_results"></ul>
+
+</body>
 </html>
