--- a/ui/browse.html
+++ b/ui/browse.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <h1>Enter movie name </h1>
-<form action="http://tuhinsherlock.imad.hasura-app.io/search-movie">
+<form action="/search-movie">
 Enter Movie name<br>
 <input type="text" name="movie_name" placeholder="Enter Movie Name">
 <br>
