Made changes locally again

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -2,12 +2,12 @@
 <head>
 </head>
 <body>
-<h1>Enter movie name </h1>
-<form action="/search-movie">
-Enter Movie name<br>
-<input type="text" name="movie_name" placeholder="Enter Movie Name">
+<h1> Search for movie </h1>
+
+<input type="text" id = "movie_name" placeholder="Enter Movie Name">
 <br>
-<input type="submit" value="Search">
-</form>
+<input type="submit" id ="search" value="Search">
+<script src="/ui/browse.js" type = "text/javascript"> 
+</script>
 </body>
 </html>
