[imad-console] Updates ui/browse.html

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -7,7 +7,7 @@
 <input type="text" id = "movie_name" placeholder="Enter Movie Name">
 <br>
 <input type="submit" id ="search" value="Search">
-<script src="/ui/browse.js" type = "text/javascript"> 
+<script src="ui/browse.js" type = "text/javascript"> 
 </script>
 </body>
 </html>
