--- a/ui/browse.html
+++ b/ui/browse.html
@@ -3,11 +3,11 @@
 </head>
 <body>
 <h1> Search for movie </h1>
-
-<input type="text" id = "movie_name" placeholder="Enter Movie Name">
+<input type="text" id = "movie_name" name ="movie_name" placeholder="Enter Movie Name">
 <br>
-<input type="submit" id ="search" value="Search">
-<script src="ui/browse.js" type = "text/javascript"> 
+<div id="livesearch">
+</div>
+<script src="/ui/browse.js" type = "text/javascript"> 
 </script>
 </body>
 </html>
