--- a/ui/index.html
+++ b/ui/index.html
@@ -35,7 +35,7 @@
 </div>
 
 
-<script type = "text/javascript" src = "ui/main.js" >
+<script type = "text/javascript" src = "/ui/main.js" >
 </script>
 
 </body>
