made changes lcally

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -1,11 +1,20 @@
 <html>
 <head>
+<link href = "/ui/browse.css" rel ="stylesheet" />
+	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
+	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
 </head>
 <body>
 <h1> Search for movie </h1>
-<input type="text" id = "movie_name" name ="movie_name" placeholder="Enter Movie Name">
+
+<input type="text" id = "movie_name" class="moviesearch" placeholder="Enter Movie Name">
 <br>
-<div id="livesearch">
+
+<ul class="subnav">
+<div id = "livesearch">
+</div>
+
+</ul>
 </div>
 <script src="/ui/browse.js" type = "text/javascript"> 
 </script>
