--- a/ui/browse.html
+++ b/ui/browse.html
@@ -1,9 +1,18 @@
 <html>
 <head>
+<style>
+	a:link, a:visited, a:active, a:hover{
+		color:inherit;
+		text-decoration: none;
+		width:600px;
+		display: inline-block;
+		}
+		</style>
 <link href = "/ui/browse.css" rel ="stylesheet" />
 	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
 	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
-</head>
+
+		</head>
 <body>
 <h1> Search for movie </h1>
 
