[imad-console] Updates ui/browse.html

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -6,6 +6,7 @@
 		text-decoration: none;
 		width:600px;
 		display: inline-block;
+		padding-bottom:5px;
 		}
 		</style>
 <link href = "/ui/browse.css" rel ="stylesheet" />
