[imad-console] Updates ui/browse.html

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -2,12 +2,12 @@
 <head>
 <style>
 	a:link, a:visited, a:active, a:hover{
-		color:inherit;
+		color:white;
 		text-decoration: none;
 		width:600px;
 		display: inline-block;
 		padding-bottom:5px;
-		}
+	}
 		</style>
 <link href = "/ui/browse.css" rel ="stylesheet" />
 	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
