[imad-console] Updates ui/browse.html

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -14,7 +14,8 @@
 
 		</head>
 <body>
-<h1> Search for movie </h1>
+
+<h1 class="search"> SEARCH A MOVIE </h1>
 
 <input type="text" id = "movie_name" class="moviesearch" placeholder="Enter Movie Name">
 <br>
