--- a/ui/browse.html
+++ b/ui/browse.html
@@ -15,8 +15,9 @@
 		</head>
 <body>
 
-<h1 class="search"> SEARCH A MOVIE </h1>
-
+<p class="search">
+SEARCH A MOVIE
+</p>
 <input type="text" id = "movie_name" class="moviesearch" placeholder="Enter Movie Name">
 <br>
 
