[imad-console] Updates ui/browse.html

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -14,10 +14,10 @@
 
 		</head>
 <body>
-
-<p class="search">
+<div class="search">
 SEARCH A MOVIE
-</p>
+</div>
+
 <input type="text" id = "movie_name" class="moviesearch" placeholder="Enter Movie Name">
 <br>
 
