--- a/ui/browse.html
+++ b/ui/browse.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-	ul a:link, a:visited, a:active, a:hover {
+	.subnav a:link, a:visited, a:active, a:hover {
 		color:white;
 		text-decoration: none;
 		width:600px;
