[imad-console] Updates ui/browse.html

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <style>
-	.livesearch a{
-		color:white;
+	.livesearch a:visited, a:link, a:hover, a:active{
+		color:#FFFFFF;
 		text-decoration: none;
 		width:600px;
 		display: inline-block;
