[imad-console] Updates ui/browse.html

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 <style>
-	.livesearch a:visited, a:link, a:hover, a:active{
+	.livesearch li a:visited, a:link, a:hover, a:active{
 		color:#FFFFFF;
-		text-decoration: none;
+		text-decoration: none !important;
 		width:600px;
 		display: inline-block;
 	}
@@ -11,7 +11,6 @@
 <link href = "/ui/browse.css" rel ="stylesheet" />
 	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
 	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
-
 		</head>
 <body>
 <div class="search">
@@ -24,7 +23,6 @@ SEARCH A MOVIE
 <ul class="subnav">
 <div id = "livesearch">
 </div>
-
 </ul>
 
 <script src="/ui/browse.js" type = "text/javascript"> 
