[imad-console] Updates ui/browse.html

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -3,7 +3,7 @@
 <style>
 	.livesearch li a:visited, a:link, a:hover, a:active{
 		color:#FFFFFF;
-		text-decoration: none;
+		text-decoration: none !important;
 		width:600px;
 		display: inline-block;
 	}
