--- a/ui/register.html
+++ b/ui/register.html
@@ -13,19 +13,19 @@
     <h3>Sign Up</h3>
     <h4>Sign Up for loads of awesome stuff</h4>
     <fieldset>
-      <input placeholder="Username" id="username" type="text" tabindex="1" required autofocus>
+      <input placeholder="Username" id="username" type="text" tabindex="1" autofocus/>
     </fieldset>
     <fieldset>
-      <input placeholder="Password" id="password" type="password" tabindex="2" required>
+      <input placeholder="Password" id="password" type="password" tabindex="2" />
     </fieldset>
     <fieldset>
-      <input placeholder="Name" id ="name" type="text" tabindex="3" required>
+      <input placeholder="Name" id ="name" type="text" tabindex="3" />
     </fieldset>
     <fieldset>
-      <input placeholder="Email" id="email" type="email" tabindex="4" required>
+      <input placeholder="Email" id="email" type="email" tabindex="4" />
     </fieldset>
     <fieldset>
-      <input type="submit" id = "register_btn" value="Register">
+      <input type="submit" id = "register_btn" value="Register"/>
     </fieldset>
   </div>
  
