write-review UI changes

--- a/ui/register.html
+++ b/ui/register.html
@@ -24,6 +24,10 @@
     <fieldset>
       <input placeholder="Email" id="email" type="email" tabindex="4" />
     </fieldset>
+    <!--<fieldset>
+      <p> Upload profile picture </p>
+      <input type = "file" id = "pic" accept="image/*"/>
+    </fieldset>-->
     <fieldset>
       <input type="submit" id = "register_btn" value="Register"/>
     </fieldset>
