--- a/ui/write-review.html
+++ b/ui/write-review.html
@@ -19,30 +19,40 @@ Review for
 
 	<ul class="text-details">
 		<li>
-			<div class = "movie_name" id = "movie_name">
-			</div>
+		<h3><div class = "movie_name" id = "movie_name"></div> </h3>
 			
 		</li>
 		<br>
+		<br>
+		<br>
 		<li>
-			<div class = "director" id = "director">
-			</div>
+			Directed by: &nbsp; &nbsp; <span class = "director" id = "director"></span>
+			
+			
+		</li>
+		
+		<br>
+		<li>
+		
+			Released on: &nbsp; &nbsp;<span class = "year_of_release" id = "year_of_release"></span>
 			
 		</li>
 		<br>
 		<li>
 		
-			<div class = "year_of_release" id = "year_of_release">
-			</div>
+			Cast: &nbsp;&nbsp;<span class = "cast" id = "cast"></span>
+			
 			
 		</li>
 		<br>
+		<br>
 		<li>
-			<div class = "description" id = "description">
-			</div>
+			Overview <div class = "description" id = "description"></span>
+			
 			<br>
 		</li>
 	<li>
+	<br>
 	<div class = "submit-review">
 		<textarea id = "review" placeholder = "Write your review here">
 		</textarea>
