--- a/ui/recent.html
+++ b/ui/recent.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<style>
+<!--<style>
 	.livesearch li a:visited, a:link, a:hover, a:active{
 		color:#FFFFFF;
 		text-decoration: none !important;
@@ -8,24 +8,18 @@
 		display: inline-block;
 	}
 		</style>
-<link href = "/ui/browse.css" rel ="stylesheet" />
+<link href = "/ui/recent.css" rel ="stylesheet" />
 	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
-	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
+	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />-->
 		</head>
 <body>
-<div class="search">
-SEARCH A MOVIE
-</div>
+RECENT REVIEWS
 
-<input type="text" id = "movie_name" class="moviesearch" placeholder="Enter Movie Name">
-<br>
+<ul id="recent_list">
 
-<ul class="subnav">
-<div id = "livesearch">
-</div>
 </ul>
 
-<!--<script src="/ui/recent.js" type = "text/javascript"> 
-</script>-->
+<script src="/ui/recent.js" type = "text/javascript"> 
+</script>
 </body>
 </html>
