--- a/ui/user.html
+++ b/ui/user.html
@@ -1,11 +1,50 @@
-<html>
+	<html>
 	<head>
-		<title>%1$s | tuhinhub</title>
+	<title>
+	</title>
+	<link href = "/ui/user.css" rel ="stylesheet" />
+	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
+	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
 	</head>
 	<body>
-		Username: %1$s <br>
-		Name: %2$s <br>
-		User since: %3$s <br>
-		Total reviews: %4$s <br>
+	<ul class="user-details">
+
+		<br>
+		<br>
+		<br>
+		<li>
+			Username: &nbsp; &nbsp; <span class = "username" id = "username"></span>
+			
+			
+		</li>
+		
+		<br>
+		<li>
+		
+			Name: &nbsp; &nbsp;<span class = "uname" id = "uname"></span>
+			
+		</li>
+		<br>
+		<li>
+		
+			Joined on : &nbsp;&nbsp;<span class = "joined" id = "joined"></span>
+	
+		</li>
+		<br>
+		<br>
+		<li>
+			Total reviews:&nbsp;&nbsp;<span class = "total_reviews" id = "total_reviews"></span>
+			<br>
+		</li>
+	
+	</ul>
+
+	<ul class="reviewuser">
+		<div id = "reviews">
+		</div>
+	</ul>
+
+	<script type = "text/javascript" src = "../ui/user.js" >
+	</script>
 	</body>
-</html>
+	</html>
